--- a/main.css
+++ b/main.css
@@ -32,8 +32,8 @@ body{
   padding: 15px;
 }
 main{
-  width: 50%;
-  height: 80%;
+  width: 70%;
+  height: 75%;
   background-color: white;
   border-radius: 10px;
   margin: 0;
@@ -77,6 +77,11 @@ button{
   justify-content: center;
   margin-top: 10px;
   
+}
+@media only screen and(max-width:520px) {
+  main{
+    max-width: 280px;
+  }
 }
 @media screen and (min-width:520px) {
   body{
