--- a/main.css
+++ b/main.css
@@ -32,7 +32,7 @@ body{
   padding: 15px;
 }
 main{
-  width: 70%;
+  width: 90%;
   height: 75%;
   background-color: white;
   border-radius: 10px;
@@ -81,6 +81,8 @@ button{
 @media only screen and(max-width:520px) {
   main{
     max-width: 280px;
+    width: 90%;
+    height: 80%;
   }
 }
 @media screen and (min-width:520px) {
