--- a/main.css
+++ b/main.css
@@ -32,7 +32,7 @@ body{
   padding: 15px;
 }
 main{
-  width: 90%;
+  width: 90vw;
   height: 100vh;
   background-color: white;
   border-radius: 10px;
